# MIGRATE

./: README.md  pyproject.toml
migrate/: cli.py  make_feature_table.py  make_matrix.py  map3d.py  ml.py  mmcif.py  test.py
migrate/data/: GFP_rgr.fas  Luc_cls.fas  Luc_reg.fas  Myg_cls.fas
migrate/scripts/: plot_site_vs_param.py  plot_site_vs_param_batch.py
